tests/NormalTests/paczka1/small_fuzzy/37541665.err
Error in line 1: 4jVqMn S579 38,5
Error in line 6: 4jVqMn A175 66,0
Error in line 9: ?S14
Error in line 8: 4jVqMn S164 24,6
Error in line 12: K6aJlQ S628 79,0
Error in line 16: HeEv7iLz S164 38,14
